[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miraesee-scripts"
version = "0.1.0"
description = "Miraesee game logic, simulators, and UI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "controllers*", "core*", "config*", "utils*", "ui*"]
