[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miraesee-scripts"
version = "2.0.0"
description = "Miraesee game logic, simulators, and UI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11",
]

[project.optional-dependencies]
bundle = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "controllers*", "core*", "config*", "utils*", "ui*"]
exclude = ["test*"]
